# solver

./: LICENSE  README.md
backend/: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
backend/src/: main.cpp
backend/src/dynamics/: interface.hpp  typedefs.hpp
backend/src/geometry/: interface.hpp  typedefs.hpp
backend/src/geometry/footers/: interface.cpp
backend/src/geometry/tests/: fileService.cpp
backend/src/proto/: absl_fix.cpp
backend/src/protos/: health.grpc.pb.cc  health.pb.cc  health.pb.h  interface.hpp
backend/src/protos/footers/: interface.cpp
backend/src/qml/: Main.qml
backend/src/typedefs/: dynamics.hpp  geometry.hpp
backend/src/utilities/: interface.hpp  logger.hpp  services.hpp
backend/src/utilities/footers/: logger.cpp  services.cpp
backend/src/utilities/tests/: helper.hpp
backend/tests/: CMakeLists.txt
protos/: dynamics.proto  geometry.proto  health.proto
scripts/: bootstrap.sh  bootstrap_install.sh  configure.sh  env_check.sh  gen_proto.sh
testbed/: go.mod
